--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "html2pdf.js": "^0.9.0",
         "vue-pdf": "^4.3.0",
         "vue3-pdf-app": "^1.0.3"
     }
